--- a/src/NilsOrgDemo.Tests/NilsOrgDemo.Tests.csproj
+++ b/src/NilsOrgDemo.Tests/NilsOrgDemo.Tests.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-    <DebugType>pdbonly</DebugType>
+    <DebugType>Full</DebugType>
   </PropertyGroup>
 
   <ItemGroup>
